--- a/shiyun.ipynb
+++ b/shiyun.ipynb
@@ -67,6 +67,9 @@
         }
       },
       "source": [
+        "# 词 is located under ~/chinese-poetry/ci\n",
+        "# 诗 is located under ~/chinese-poetry/json\n",
+        "# poet name could be in 繁體 or 简体 so its better to search for both\n",
         "poet_name = [\"苏轼\", \"蘇軾\"]\n",
         "dynasty = \"song\" # choice from [\"tang\", \"song\"]\n",
         "shiciji_file_name = \"sushi\"\n",
